feat: rewrite SkillLoader for Agent Skills standard + backward compat (F2)
- Parse new standard fields: license, compatibility, allowed-tools, metadata
- Parse Claude Code extension fields: model, effort, context, agent, etc.
- Backward compat: old version/author auto-migrate to metadata with WARN log
- Old triggers/executor silently ignored with WARN log
- Forward compat: unknown fields silently ignored
- Update SkillCommands, SkillRegistryTest, GrimoCommandCompleterTest,
  SkillCommandsTest for new 16-field SkillDefinition constructor

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>